--- a/Cataloguer/Views/Home/ArtistBiography.cshtml
+++ b/Cataloguer/Views/Home/ArtistBiography.cshtml
@@ -9,4 +9,4 @@
     <img class="img-thumbnail center-block" height="300px" src="@Model.GetPictureLink()" />
 </div>
 
-<h4>@Model.GetFullBiography()</h4>
+<h5 style="margin-top: 80px">@Model.GetFullBiography()</h5>
