--- a/Cataloguer/Views/Local/Album.cshtml
+++ b/Cataloguer/Views/Local/Album.cshtml
@@ -16,28 +16,9 @@
 </div>
 @if (Model.Tracks.Count == 0)
 {
-    <h3 class="text-center">There are no tracks in this album</h3>
+    <h4 class="text-center">There are no tracks in this album</h4>
 }
 else
 {
-    <h2 class="text-center">Tracklist</h2>
-    <table class="table table-hover table-striped table-bordered">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (Track track in Model.Tracks)
-            {
-                <tr>
-                    <td>@track.Name</td>
-                    <td>
-                        <audio controls src="@track.LinkToAudio"></audio>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    @Html.Partial("PartialTableWithTracks", Model.Tracks)
 }
