Moving all files from the old project to the new

--- a/Cataloguer/wwwroot/css/site.css
+++ b/Cataloguer/wwwroot/css/site.css
@@ -35,3 +35,39 @@ body {
         display: none;
     }
 }
+
+/* Override the default bootstrap behavior where horizontal description lists 
+   will truncate terms that are too long to fit in the left column 
+*/
+.dl-horizontal dt {
+    white-space: normal;
+}
+
+/* Set width on the form input elements since they're 100% wide by default */
+input,
+select,
+textarea {
+    max-width: 280px;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.flex-container > a {
+    flex-basis: 23%;
+    max-width: 260px;
+}
+
+.flex-container p {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+#loading {
+    display: none;
+    height: 100px;
+}
